--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+ASSET_URL=http://localhost
 
 PASSWORD_RESET_URL=
 
@@ -70,3 +71,6 @@ CLOCKWORK_AUTHENTICATION=false
 CLOCKWORK_AUTHENTICATION_PASSWORD=
 
 LOG_VIEWER_ENABLED=false
+
+OCTANE_SERVER=swoole
+OCTANE_HTTPS=true
