--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,19 @@
         "bensampo/laravel-enum": "^6.3",
         "cviebrock/eloquent-sluggable": "^10.0",
         "doctrine/dbal": "^3.6",
+        "fedeisas/laravel-mail-css-inliner": "^5.2",
         "guzzlehttp/guzzle": "^7.2",
         "itsgoingd/clockwork": "^5.1",
+        "knuckleswtf/scribe": "^4.21",
         "laravel/framework": "^10.10",
         "laravel/octane": "^2.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "opcodesio/log-viewer": "^2.4",
         "spatie/laravel-medialibrary": "^10.9",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-query-builder": "^5.2",
-        "knuckleswtf/scribe": "^4.21",
-        "stripe/stripe-php": "^10.15",
-        "opcodesio/log-viewer": "^2.4"
+        "stripe/stripe-php": "^10.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
